python/test-data/testTypesSubclassing1.err
Traceback (most recent call last):
  File "test-data/testTypesSubclassing1.py", line 29, in <module>
    feedAnimal(dog)
  File "test-data/testTypesSubclassing1.py", line 26, in feedAnimal
    a.feed(AnimalFood('some cat food'))
WyppTypeError: Dog does not implement parent Animal
given:    <Dog>
expected: value of type Animal

declared at: test-data/testTypesSubclassing1.py:20
declared at: test-data/testTypesSubclassing1.py:10
caused by: test-data/testTypesSubclassing1.py:20
  | class Dog(Animal):
caused by: test-data/testTypesSubclassing1.py:22
  |     def feed(self, food: DogFood) -> None:

Argument food of method feed violates the type declared by the parent Animal.
Annotation DogFood is incompatible with the parent's annotation AnimalFood.

given:    <AnimalFood>
expected: value of type DogFood

context: feed(self: Self, food: DogFood) -> None
                                ^^^^^^^
declared at: test-data/testTypesSubclassing1.py:22
declared at: test-data/testTypesSubclassing1.py:10
caused by: test-data/testTypesSubclassing1.py:22
  |     def feed(self, food: DogFood) -> None:
